// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> components/base/fetchChanges.tsx --- Snapshot +++ Should match snapshot there are no changes in master 1`] = `
<button
  className="MuiButtonBase-root-31 MuiButton-root-5 MuiButton-text-7 MuiButton-flat-10 FetchChangesComponent-clickable-3 FetchChangesComponent-btn-2"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-6"
  >
    <div
      className="MuiGrid-container-34 MuiGrid-align-items-xs-center-42"
    >
      <div
        className="MuiGrid-item-35"
      >
        <i
          className="fa fa-download"
          style={
            Object {
              "color": "#0062BA",
              "fontSize": 36,
              "fontWeight": null,
              "margin": "0px -5px 0px -5px",
              "padding": null,
            }
          }
        />
      </div>
      <div
        className="MuiGrid-item-35"
      >
        <p
          className="MuiTypography-root-132 MuiTypography-body1-141 FetchChangesComponent-color_blueDark-4"
          id="fetch_changes_btn"
        >
          sync_header.fetch_changes
        </p>
      </div>
    </div>
  </span>
  <span
    className="MuiTouchRipple-root-168"
  />
</button>
`;

exports[`>>> components/base/fetchChanges.tsx --- Snapshot +++ Should match snapshot when changes in master 1`] = `
<button
  className="MuiButtonBase-root-31 MuiButton-root-5 MuiButton-text-7 MuiButton-flat-10 FetchChangesComponent-clickable-3 FetchChangesComponent-btn-2"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-6"
  >
    <div
      className="MuiGrid-container-34 MuiGrid-align-items-xs-center-42"
    >
      <div
        className="MuiGrid-item-35"
      >
        <i
          className="fa fa-download"
          style={
            Object {
              "color": "#0062BA",
              "fontSize": 36,
              "fontWeight": 600,
              "margin": "0px -5px 0px -5px",
              "padding": null,
            }
          }
        />
      </div>
      <div
        className="MuiGrid-item-35"
      >
        <p
          className="MuiTypography-root-132 MuiTypography-body1-141 FetchChangesComponent-color_blueDark-4 FetchChangesComponent-bold-1"
          id="fetch_changes_btn"
        >
          sync_header.fetch_changes
        </p>
      </div>
    </div>
  </span>
  <span
    className="MuiTouchRipple-root-168"
  />
</button>
`;
